2001-11-02  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-reload-this-page): When execute with prefix
	argument, clear post-data certainty.

2001-11-01  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-goto-url): Remove processing url's forms from the
	history when post data.
	(w3m): Use `select-frame-set-input-focus' instead of `x-focus-frame'.

	* w3m-form.el (w3m-form-resume): Fix typo.

2001-11-01  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-delete-buffer): New function.
	(w3m-copy-buffer): Call `w3m-goto-url' instead of copying buffer
	content.

2001-10-31  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-form.el (w3m-form-resume): Remove submit button status
	to support forms containing multiple submit buttons.

2001-10-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-accept-languages): Don't use config file if there
	are no contents for "accept_language".

2001-10-31  Hideyuki SHIRAI  <shirai@meadowy.org>

	* shimbun/mew-shimbun.el (mew-shimbun-retrieve-all): When
	current-buffer is shimbun folder, scan update automatically.
	(mew-shimbun-unseen-setup): Advices for save cache are more safer.

2001-10-31  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-e21.el (w3m-tab-unselected-face): Setup color for tty.
	(w3m-tab-selected-face): Ditto.
	(w3m-tab-background-face): Ditto.

	* w3m.el (w3m-next-buffer): New function.
	(w3m-previous-buffer): Ditto.
	(w3m-lynx-like-map): Bind `C-tab' as the key to call `w3m-next-buffer';
	Bind `C-S-tab' as the key to call `w3m-previous-buffer'.
	(w3m-info-like-map): Ditto.

2001-10-31  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-accept-languages): New option.
	(w3m-dump-head-source-command-argument): Abolished.
	(w3m-dump-head-source-command-arguments): New constant.
	(w3m-w3m-expand-arguments): New macro.
	(w3m-w3m-dump-head-source): To generate command arguments for w3m,
	use `w3m-w3m-expand-arguments' and refer
	`w3m-dump-head-source-command-arguments'.