@@ -3707,9 +3707,10 @@ that is affected by `w3m-pop-up-frames'."
     (define-key map "q" 'w3m-close-window)
     (define-key map "Q" 'w3m-quit)
     (define-key map "\M-n" 'w3m-copy-buffer)
-    (define-key map [(control tab)] 'w3m-next-buffer)
-    (define-key map [(control shift iso-lefttab)] 'w3m-previous-buffer)
-    (define-key map [(control iso-left-tab)] 'w3m-previous-buffer)
+    (define-key map "\C-c\C-t" 'w3m-copy-buffer)
+    (define-key map "\C-c\C-p" 'w3m-previous-buffer)
+    (define-key map "\C-c\C-n" 'w3m-next-buffer)
+    (define-key map "\C-c\C-w" 'w3m-delete-buffer)
     (define-key map "R" 'w3m-reload-this-page)
     (define-key map "C" 'w3m-redisplay-with-charset)
     (define-key map "?" 'describe-mode)
@@ -3786,9 +3787,10 @@ that is affected by `w3m-pop-up-frames'."
     (define-key map "n" 'w3m-view-next-page)
     (define-key map "N" 'w3m-namazu)
     (define-key map "\M-n" 'w3m-copy-buffer)
-    (define-key map [(control tab)] 'w3m-next-buffer)
-    (define-key map [(control shift iso-lefttab)] 'w3m-previous-buffer)
-    (define-key map [(control iso-left-tab)] 'w3m-previous-buffer)
+    (define-key map "\C-c\C-t" 'w3m-copy-buffer)
+    (define-key map "\C-c\C-p" 'w3m-previous-buffer)
+    (define-key map "\C-c\C-n" 'w3m-next-buffer)
+    (define-key map "\C-c\C-w" 'w3m-delete-buffer)
     (define-key map "o" 'w3m-history)
     (define-key map "O" 'w3m-db-history)
     (define-key map "p" 'w3m-view-previous-page)
